# AuRooms

./: .replit  404.html  ADMIN_ACCESS.md  DEBUG_GUIDE.md  ENVIRONMENT_VARIABLES.md  EmailJS_Setup.md  GOOGLE_OAUTH_SETUP.md  HOW_TO_GET_DATABASE_URL.md  LOGO_IMPLEMENTATION.md  MIGRATION_SUMMARY.md  NETLIFY_ENV_VARS.txt  NETLIFY_VARS_READY.txt  OAUTH_PROGRESS.md  README-ADMIN.md  STRIPE_SETUP.md  SUPABASE_SETUP.md  TEST_PLAN.md  _headers  _redirects  admin-bonifici.html  admin-cambio-password.html  admin-dashboard.html  admin-login.html  admin-password-generator.html  app.py  checkout.html  conferma-finale.html  conferma.html  dashboard.html  database_schema.sql  index.html  login-success.html  login.html  netlify.toml  package.json  pagamento.html  pyproject.toml  replit.md  requirements.txt  robots.txt  (+8 more)
attached_assets/: Pasted-Ottimo-lavoro-finora-il-codice-pulito-moderno-e-ben-strutturato-Ora-ti-propongo-5-modifi-1753691092331_1753691092332.txt  Pasted-Perfetto-Andiamo-passo-passo-per-costruire-un-esperienza-completa-post-prenotazione-con--1753693165748_1753693165749.txt
backend/: .env  .env.example  README.md  render.yaml  requirements.txt  schema.sql
backend/app/: __init__.py
backend/app/blueprints/: auth.py  bookings.py  health.py  payments.py
backend/app/models/: __init__.py  booking.py  customer.py  (+1 more)
backend/instance/: local.db
netlify/functions/: bookings.js  check-env.js  connection-test.js  create-payment.js  db-test.js  debug-db.js  google-callback.js  google-login.js  health.js  rest-db-test.js  simple-db-test.js  stripe-webhook.js  users.js
